chore(backend): apply IntelliJ inspection cleanups
Modernize to Java 25 idioms (Math.clamp, List.getFirst), drop a
cross-scope Javadoc {@link} to a test-only class, and collapse
redundant nested/chained if-returns in SeriesValidator.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>